--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+body{
+    margin: 0;
+}
 #container{
     display: flex;
+}
+#left-container{
+    border: 1px solid red;
+}
+#right-container{
+    border: 1px solid blue;
+}
+#background{
+    width: 100%;
 }
