--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,16 @@ p{
 form{
     border: 1px solid black;
 }
-label,input{
+input{
     display: block;
-
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+label{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 0;
 }
 #first-row, #second-row, #third-row{
     display: flex;
